--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title> test web </title>
 <body>
-  <h1>Test</h1>
+  <img src="banner.png" height= "100" width= "200">
 </body>
 </html>
   
