--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-<title> test web </title>
+<title> Four Network ID </title>
 <body>
   <img src="banner.png" height= "100" width= "200">
 </body>
