--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
-<html>
+<html]
 <title> Four Network ID </title>
-<body>
-  <img src="banner.png" height= "100" width= "200">
+<body style= "color:gray:">
+  <img src="banner.webp" height= "100" width= "200">
+  <h1> This is the picture of a building</h1>
 </body>
 </html>
   
