--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html]
+<html>
 <title> Four Network ID </title>
 <body style= "color:gray:">
   <img src="banner.webp" height= "100" width= "200">
