--- a/home/index.html
+++ b/home/index.html
@@ -1,4 +1,55 @@
-<html>
-<h1>
-  this is a home
-</h1>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Four Network ID</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #f9f9f9;
+        }
+        .header {
+            background: url('background-image.jpg') no-repeat center center;
+            background-size: cover;
+            height: 500px;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            position: relative;
+        }
+        .header h1 {
+            font-size: 3rem;
+        }
+        .content {
+            background-color: #ff9800;
+            padding: 20px;
+            text-align: center;
+        }
+        .content input {
+            width: 300px;
+            padding: 10px;
+            margin-right: 10px;
+        }
+        .content button {
+            padding: 10px;
+        }
+    </style>
+</head>
+<body>
+    <header class="header">
+        <h1>Four Network ID</h1>
+        <p>Luckyblock theme minecraft server</p>
+    </header>
+    <footer class="text-center mt-4">
+        <nav>
+            <a href="four.my.id/home" class="mr-3">Home</a>
+            <a href="four.my.id/store" class="mr-3">Store</a>
+            <a href="frour.my.id/perks">Perks</a>
+        </nav>
+    </footer>
+
+</body>
+</html>
