--- a/home/index.html
+++ b/home/index.html
@@ -40,16 +40,22 @@
 </head>
 <body>
     <header class="header">
+        <img src="bannner.jpg" alt="banner">
         <h1>Four Network ID</h1>
         <p>Luckyblock theme minecraft server</p>
-    </header>
-    <footer class="text-center mt-4">
         <nav>
             <a href="four.my.id/home" class="mr-3">Home</a>
             <a href="four.my.id/store" class="mr-3">Store</a>
             <a href="frour.my.id/perks">Perks</a>
         </nav>
+    </header>
+<div class="content">
+    <h3>Test</h3>
+</div>
+<div class="content">
+    <a href="dc.gg/fournetwork>><button class"btn btn-primary">Discord</button>
+</div>
+    <footer class="text-center mt-4">
     </footer>
-
 </body>
 </html>
