--- a/home/index.html
+++ b/home/index.html
@@ -10,7 +10,6 @@
             background-color: #f9f9f9;
         }
         .header {
-            background: url('background-image.jpg') no-repeat center center;
             background-size: cover;
             height: 500px;
             color: white;
@@ -40,7 +39,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="bannner.jpg" alt="banner">
+        <img src="bannner.ppg" alt="banner">
         <h1>Four Network ID</h1>
         <p>Luckyblock theme minecraft server</p>
         <nav>
@@ -53,7 +52,7 @@
     <h3>Test</h3>
 </div>
 <div class="content">
-    <a href="dc.gg/fournetwork>><button class"btn btn-primary">Discord</button>
+    <a href="https://dc.gg/fournetwork"><button class"btn btn-primary">Discord</button>
 </div>
     <footer class="text-center mt-4">
     </footer>
