--- a/home/index.html
+++ b/home/index.html
@@ -35,6 +35,31 @@
         .content button {
             padding: 10px;
         }
+        footer {
+            background-color: #f1f1f1;
+            padding: 20px;
+            text-align: center;
+            font-size: 14px;
+            color: #333;
+        }
+        .footer-content {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            max-width: 1200px;
+            margin: auto;
+        }
+        .footer-section {
+            flex: 1;
+            padding: 10px;
+            min-width: 200px;
+        }
+        .footer-section h4 {
+            margin-bottom: 10px;
+        }
+        .footer-section p {
+            margin: 5px 0;
+        }
     </style>
 </head>
 <body>
@@ -54,7 +79,25 @@
 <div class="content">
     <a href="https://dc.gg/fournetwork"><button class"btn btn-primary">Discord</button>
 </div>
-    <footer class="text-center mt-4">
-    </footer>
+<footer>
+    <div class="footer-content">
+        <div class="footer-section">
+            <p>&copy; Four Network ID</p>
+            <p>Luckyblock Theme Server</p>
+        </div>
+        <div class="footer-section">
+            <h4>Contact</h4>
+            <p>Email: support@four.my.id</p>
+            <p>Discord: antophd</p>
+            <a href="https://dc.gg/fournetwork"><p>Four Network discord server</p>
+        </div>
+        <div class="footer-section">
+            <h4>Follow us</h4>
+            <p>TikTok</p>
+            <a href="https://tiktok.com/@antop.hd"><p>@antop.hd</p>
+            <a href="https://tiktok.com/@fournetworkid"><p>@fournetworkidl</p>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
