--- a/home/index.html
+++ b/home/index.html
@@ -38,7 +38,7 @@
         footer {
             background-color: #f1f1f1;
             padding: 20px;
-            text-align: center;
+            text-align: left;
             font-size: 14px;
             color: #333;
         }
@@ -64,7 +64,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="bannner.ppg" alt="banner">
+        <img src="banner.ppg" alt="banner">
         <h1>Four Network ID</h1>
         <p>Luckyblock theme minecraft server</p>
         <nav>
