--- a/home/index.html
+++ b/home/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Four Network ID</title>
+    <link rel="icon" type="image/x-icon" href="/home/icon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
@@ -64,7 +65,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="banner.ppg" alt="banner">
+        <img src="banner.png" alt="banner">
         <h1>Four Network ID</h1>
         <p>Luckyblock theme minecraft server</p>
         <nav>
@@ -77,7 +78,7 @@
     <h3>Test</h3>
 </div>
 <div class="content">
-    <a href="https://dc.gg/fournetwork"><button class"btn btn-primary">Discord</button>
+    <a href="https://dc.gg/fournetwork"><button class"btn btn-primary">Discord</button></a>
 </div>
 <footer>
     <div class="footer-content">
@@ -89,13 +90,13 @@
             <h4>Contact</h4>
             <p>Email: support@four.my.id</p>
             <p>Discord: antophd</p>
-            <a href="https://dc.gg/fournetwork"><p>Four Network discord server</p>
+            <a href="https://dc.gg/fournetwork"><p>Four Network discord server</p></a>
         </div>
         <div class="footer-section">
             <h4>Follow us</h4>
             <p>TikTok</p>
-            <a href="https://tiktok.com/@antop.hd"><p>@antop.hd</p>
-            <a href="https://tiktok.com/@fournetworkid"><p>@fournetworkidl</p>
+            <a href="https://tiktok.com/@antop.hd"><p>@antop.hd</p></a>
+            <a href="https://tiktok.com/@fournetworkid"><p>@fournetworkid</p></a>
         </div>
     </div>
 </footer>
