--- a/home/index.html
+++ b/home/index.html
@@ -69,9 +69,11 @@
         <h1>Four Network ID</h1>
         <p>Luckyblock theme minecraft server</p>
         <nav>
-            <a href="four.my.id/home" class="mr-3">Home</a>
-            <a href="four.my.id/store" class="mr-3">Store</a>
-            <a href="frour.my.id/perks">Perks</a>
+            <ul>
+                <li><a href="four.my.id/home" class="mr-3">Home</a></li>
+                <li><a href="four.my.id/store" class="mr-3">Store</a></li>
+                <li><a href="frour.my.id/perks">Perks</a></li>
+            </ul>
         </nav>
     </header>
 <div class="content">
