--- a/home/index.html
+++ b/home/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Four Network ID</title>
-    <link rel="icon" type="image/x-icon" href="/home/icon.png">
+    <link rel="icon" type="image/x-icon" href="icon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
@@ -37,11 +37,11 @@
             padding: 10px;
         }
         footer {
-            background-color: #f1f1f1;
+            background-color: #e6a823;
             padding: 20px;
             text-align: left;
             font-size: 14px;
-            color: #333;
+            color: #ffffff;
         }
         .footer-content {
             display: flex;
@@ -61,13 +61,14 @@
         .footer-section p {
             margin: 5px 0;
         }
+        h1 {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
     <header class="header">
         <img src="banner.png" alt="banner">
-        <h1>Four Network ID</h1>
-        <p>Luckyblock theme minecraft server</p>
         <nav>
             <ul>
                 <li><a href="four.my.id/home" class="mr-3">Home</a></li>
@@ -75,6 +76,8 @@
                 <li><a href="frour.my.id/perks">Perks</a></li>
             </ul>
         </nav>
+        <h1>Four Network ID</h1>
+        <p>Luckyblock theme minecraft server</p>
     </header>
 <div class="content">
     <h3>Test</h3>
