--- a/home/index.html
+++ b/home/index.html
@@ -20,8 +20,12 @@
             text-align: center;
             position: relative;
         }
-        .header h1 {
+        .header h1, .header p {
+            potition: absolute;
             font-size: 3rem;
+            color: #ffffff;
+            left: 50%;
+            z-index: 1;
         }
         .content {
             background-color: #ff9800;
