--- a/home/index.html
+++ b/home/index.html
@@ -81,7 +81,6 @@
 </head>
 <body>
     <header class="header">
-        <img src="banner.png" alt="banner">
         <nav>
             <ul>
                 <li><a href="four.my.id/home" class="mr-3">Home</a></li>
@@ -89,8 +88,9 @@
                 <li><a href="frour.my.id/perks">Perks</a></li>
             </ul>
         </nav>
-        <h1 class="h1">Four Network ID</h1>
-        <p class="p">Luckyblock theme minecraft server</p>
+        <img src="banner.png" alt="banner">
+            <h1 class="h1">Four Network ID</h1>
+            <p>Luckyblock theme minecraft server</p>
     </header>
 <div class="server-status">
         FOUR is Currently <span class="server-online"></span>!<br>
