--- a/home/index.html
+++ b/home/index.html
@@ -12,7 +12,7 @@
         }
         .header {
             background-size: cover;
-            height: 300px;
+            height: 260px;
             color: white;
             display: flex;
             justify-content: space-between;
@@ -92,9 +92,11 @@
             <h1 class="h1">Four Network ID</h1>
             <p>Luckyblock theme minecraft server</p>
     </header>
-<div class="server-status">
+<div class=:"content">
+    <div class="server-status">
         FOUR is Currently <span class="server-online"></span>!<br>
         Players online: <span class="player-count"></span> dari 2024
+    </div>
 </div>
 <script src="https://mcapi.us/scripts/minecraft.min.js"></script>
     <script>
