--- a/home/index.html
+++ b/home/index.html
@@ -12,7 +12,7 @@
         }
         .header {
             background-size: cover;
-            height: 260px;
+            height: 500px;
             color: white;
             display: flex;
             justify-content: space-between;
@@ -88,7 +88,7 @@
                 <li><a href="frour.my.id/perks">Perks</a></li>
             </ul>
         </nav>
-        <img src="banner.png" alt="banner">
+        <img src="banner.png" alt="banner" height="500">
             <h1 class="h1">Four Network ID</h1>
             <p>Luckyblock theme minecraft server</p>
     </header>
