--- a/home/index.html
+++ b/home/index.html
@@ -11,8 +11,9 @@
             background-color: #f9f9f9;
         }
         .header {
+            background-color: #000000;
             background-size: cover;
-            height: 500px;
+            height: 200px;
             color: white;
             display: flex;
             justify-content: space-between;
@@ -77,6 +78,16 @@
         .server-online {
             font-weight: bold;
         }
+        img {
+            background-size: cover;
+            height: 500px;
+            color: white;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            text-align: center;
+            position: relative;
+        }
     </style>
 </head>
 <body>
@@ -85,14 +96,15 @@
             <ul>
                 <li><a href="four.my.id/home" class="mr-3">Home</a></li>
                 <li><a href="four.my.id/store" class="mr-3">Store</a></li>
-                <li><a href="frour.my.id/perks">Perks</a></li>
+                <li><a href="four.my.id/perks">Perks</a></li>
             </ul>
         </nav>
-        <img src="banner.png" alt="banner" height="500">
-            <h1 class="h1">Four Network ID</h1>
-            <p>Luckyblock theme minecraft server</p>
     </header>
-<div class=:"content">
+<div class="
+    <img src="banner.png" alt="banner" height="500" width=">
+    <h1 class="h1">Four Network ID</h1>
+    <p>Luckyblock theme minecraft server</p>
+<div class="content">
     <div class="server-status">
         FOUR is Currently <span class="server-online"></span>!<br>
         Players online: <span class="player-count"></span> dari 2024
