--- a/home/index.html
+++ b/home/index.html
@@ -11,7 +11,7 @@
             background-color: #f9f9f9;
         }
         .header {
-            background-color: #000000;
+            background-color: #0a0909;
             background-size: cover;
             height: 200px;
             color: white;
