--- a/home/index.html
+++ b/home/index.html
@@ -13,7 +13,7 @@
         .header {
             background-color: #0a0909;
             background-size: cover;
-            height: 200px;
+            height: 50px;
             color: white;
             display: flex;
             justify-content: space-between;
@@ -94,9 +94,9 @@
     <header class="header">
         <nav>
             <ul>
-                <li><a href="four.my.id/home" class="mr-3">Home</a></li>
-                <li><a href="four.my.id/store" class="mr-3">Store</a></li>
-                <li><a href="four.my.id/perks">Perks</a></li>
+                <a href="four.my.id/home" class="mr-3">Home</a>
+                <a href="four.my.id/store" class="mr-3">Store</a>
+                <a href="four.my.id/perks">Perks</a>
             </ul>
         </nav>
     </header>
