--- a/home/index.html
+++ b/home/index.html
@@ -94,16 +94,17 @@
     <header class="header">
         <nav>
             <ul>
-                <a href="four.my.id/home" class="mr-3">Home</a>
-                <a href="four.my.id/store" class="mr-3">Store</a>
-                <a href="four.my.id/perks">Perks</a>
+                <a href="four.my.id/home" class="mr-3"><h2>Home</h2></a>
+                <a href="four.my.id/store" class="mr-3"><h2>Store</h2></a>
+                <a href="four.my.id/perks"><h2>Perks</h2></a>
             </ul>
         </nav>
     </header>
-<div class="
-    <img src="banner.png" alt="banner" height="500" width=">
+<div class="img">
+    <img src="banner.png" alt="banner" height="500">
     <h1 class="h1">Four Network ID</h1>
     <p>Luckyblock theme minecraft server</p>
+</div>div>
 <div class="content">
     <div class="server-status">
         FOUR is Currently <span class="server-online"></span>!<br>
