--- a/home/index.html
+++ b/home/index.html
@@ -70,7 +70,6 @@
             text-align: center;
         }
         .server-status {
-            background: #ffffff;
             padding: 20px;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -94,9 +93,9 @@
     <header class="header">
         <nav>
             <ul>
-                <a href="four.my.id/home" class="mr-3"><h2>Home</h2></a>
-                <a href="four.my.id/store" class="mr-3"><h2>Store</h2></a>
-                <a href="four.my.id/perks"><h2>Perks</h2></a>
+                <a href="four.my.id/home" class="mr-3"><h3>Home</h3></a>
+                <a href="four.my.id/store" class="mr-3"><h3>Store</h3></a>
+                <a href="four.my.id/perks"><h3>Perks</h3></a>
             </ul>
         </nav>
     </header>
@@ -104,7 +103,7 @@
     <img src="banner.png" alt="banner" height="500">
     <h1 class="h1">Four Network ID</h1>
     <p>Luckyblock theme minecraft server</p>
-</div>div>
+</div>
 <div class="content">
     <div class="server-status">
         FOUR is Currently <span class="server-online"></span>!<br>
