--- a/home/index.html
+++ b/home/index.html
@@ -93,9 +93,9 @@
     <header class="header">
         <nav>
             <ul>
-                <a href="four.my.id/home" class="mr-3"><h3>Home</h3></a>
-                <a href="four.my.id/store" class="mr-3"><h3>Store</h3></a>
-                <a href="four.my.id/perks"><h3>Perks</h3></a>
+                <a href="https://four.my.id/home" class="mr-3"><h3>Home</h3></a>
+                <a href="https://four.my.id/store" class="mr-3"><h3>Store</h3></a>
+                <a href="https://four.my.id/perks"><h3>Perks</h3></a>
             </ul>
         </nav>
     </header>
