--- a/home/index.html
+++ b/home/index.html
@@ -68,6 +68,7 @@
         }
         h1 {
             text-align: center;
+            color: #ffffff;
         }
         .server-status {
             padding: 20px;
@@ -86,6 +87,7 @@
             align-items: center;
             text-align: center;
             position: relative;
+            margin: auto;
         }
     </style>
 </head>
@@ -93,9 +95,9 @@
     <header class="header">
         <nav>
             <ul>
-                <a href="https://four.my.id/home" class="mr-3"><h3>Home</h3></a>
-                <a href="https://four.my.id/store" class="mr-3"><h3>Store</h3></a>
-                <a href="https://four.my.id/perks"><h3>Perks</h3></a>
+                <a href="https://four.my.id/home" class="h1">Home</a>
+                <a href="https://four.my.id/store" class="h1">Store</a>
+                <a href="https://four.my.id/perks" class="h1">Perks</a>
             </ul>
         </nav>
     </header>
