--- a/home/index.html
+++ b/home/index.html
@@ -101,9 +101,9 @@
             </ul>
         </nav>
     </header>
-<div class="img">
+<div class="image-container">
     <img src="banner.png" alt="banner" height="500">
-    <h1 class="h1">Four Network ID</h1>
+    <div class="overlay-text"><h1 class="h1">Four Network ID</h1></div>
     <p>Luckyblock theme minecraft server</p>
 </div>
 <div class="content">
