--- a/home/index.html
+++ b/home/index.html
@@ -81,7 +81,7 @@
         img {
             background-size: cover;
             height: 500px;
-            color: white;
+            color: #ffffff;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -89,15 +89,19 @@
             position: relative;
             margin: auto;
         }
+        nav {
+            color: #ffffff;
+            size: 1rem;
+            align: right;
     </style>
 </head>
 <body>
     <header class="header">
         <nav>
             <ul>
-                <a href="https://four.my.id/home" class="h1">Home</a>
-                <a href="https://four.my.id/store" class="h1">Store</a>
-                <a href="https://four.my.id/perks" class="h1">Perks</a>
+                <a href="https://four.my.id/home" class="nav">Home</a>
+                <a href="https://four.my.id/store" class="nav">Store</a>
+                <a href="https://four.my.id/perks" class="nav">Perks</a>
             </ul>
         </nav>
     </header>
