--- a/home/index.html
+++ b/home/index.html
@@ -90,9 +90,11 @@
             margin: auto;
         }
         nav {
+            position: absolute;
             color: #ffffff;
             size: 1rem;
             align: right;
+            z-index: 1;
         }
     </style>
 </head>
