--- a/home/index.html
+++ b/home/index.html
@@ -92,8 +92,8 @@
         nav {
             position: absolute;
             color: #ffffff;
-            size: 1rem;
-            align: right;
+            size: 2rem;
+            text-align: right;
             z-index: 1;
         }
     </style>
