--- a/home/index.html
+++ b/home/index.html
@@ -89,7 +89,7 @@
             position: relative;
             margin: auto;
         }
-        nav {
+        .nav {
             position: absolute;
             color: #ffffff;
             size: 2rem;
