--- a/home/index.html
+++ b/home/index.html
@@ -102,9 +102,9 @@
     <header class="header">
         <nav>
             <ul>
-                <a href="https://four.my.id/home" class="nav">Home</a>
-                <a href="https://four.my.id/store" class="nav">Store</a>
-                <a href="https://four.my.id/perks" class="nav">Perks</a>
+                <li><a href="https://four.my.id/home" class="nav">Home</a></li>
+                <li><a href="https://four.my.id/store" class="nav">Store</a></li>
+                <li><a href="https://four.my.id/perks" class="nav">Perks</a></li>
             </ul>
         </nav>
     </header>
