--- a/home/index.html
+++ b/home/index.html
@@ -92,7 +92,6 @@
         .nav {
             position: absolute;
             color: #ffffff;
-            size: 2rem;
             text-align: right;
             z-index: 1;
         }
@@ -102,7 +101,9 @@
     <header class="header">
         <nav>
             <ul>
-                <a href="https://four.my.id/home" class="nav">Home</a> <a href="https://four.my.id/store" class="nav">Store</a> <a href="https://four.my.id/perks" class="nav">Perks</a>
+                <a href="https://four.my.id/home"><h4 class="nav">Home</h4></a> 
+                <a href="https://four.my.id/store"><h4 class="nav">Store</h4></a> 
+                <a href="https://four.my.id/perks"><h4 class="nav">Perks</h4></a>
             </ul>
         </nav>
     </header>
