--- a/home/index.html
+++ b/home/index.html
@@ -100,9 +100,7 @@
     <header class="header">
         <nav>
             <ul>
-                <a href="https://four.my.id/home"><h4 class="nav">Home</h4></a> 
-                <a href="https://four.my.id/store"><h4 class="nav">Store</h4></a> 
-                <a href="https://four.my.id/perks"><h4 class="nav">Perks</h4></a>
+                <a href="https://four.my.id/home"><h4 class="nav">Home</h4></a> <a href="https://four.my.id/store"><h4 class="nav">Store</h4></a> <a href="https://four.my.id/perks"><h4 class="nav">Perks</h4></a>
             </ul>
         </nav>
     </header>
