--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE HTML>
 <html>
-<title> Four Network ID </title>
+<title> Seven Ex Shop </title>
 <body style= "color:gray:">
-  <img src="banner.webp" height= "1000" width= "2000">
-  <h1> This is the picture of a building</h1>
+  <img src="banner.jpg" height= "1000" width= "2000">
+  <h1> OPEN PO!!!!</h1>
+  <p>Mulai dari tanggal 17 sampai 19 april</p>
+  <p>Ready tanggal 22 april</p>
 </body>
 </html>
   
