--- a/home/index.html
+++ b/home/index.html
@@ -117,8 +117,8 @@
     </header>
 <div class="image-container">
     <img src="banner.png" alt="banner" height="500">
-    <div class="header-text"><h1 class="h1">Four Network ID</h1></div>
-    <p>Luckyblock theme minecraft server</p>
+    <div class="header-text"><h1>Four Network ID</h1></div>
+    <p class="header-text">Luckyblock theme minecraft server</p>
 </div>
 <div class="content">
     <div class="server-status">
