--- a/home/index.html
+++ b/home/index.html
@@ -101,9 +101,12 @@
             left: 50%;
             transform: translate(-50%, -50%);
             font-size: 2em;
-            background-color: rgba(0, 0, 0, 0.5); 
-            padding: 10px; 
-            border-radius: 5px;
+        }
+        .header-p {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
@@ -118,7 +121,7 @@
 <div class="image-container">
     <img src="banner.png" alt="banner" height="500">
     <div class="header-text"><h1>Four Network ID</h1></div>
-    <p class="header-text">Luckyblock theme minecraft server</p>
+    <p class="header-p">Luckyblock theme minecraft server</p>
 </div>
 <div class="content">
     <div class="server-status">
