--- a/home/index.html
+++ b/home/index.html
@@ -107,6 +107,7 @@
             top: 55%;
             left: 50%;
             transform: translate(-50%, -50%);
+            color: #ffffff;
         }
     </style>
 </head>
