--- a/home/index.html
+++ b/home/index.html
@@ -11,7 +11,7 @@
             background-color: #f9f9f9;
         }
         .header {
-            background-image: srcbanner;
+            background-image: banner.png;
             background-color: #0a0909;
             background-size: cover;
             height: 50px;
