--- a/home/index.html
+++ b/home/index.html
@@ -9,6 +9,7 @@
     <style>
         body {
             background-color: #f9f9f9;
+            margin: 0;
         }
         .header {
             background-image: banner.png;
@@ -21,7 +22,7 @@
             align-items: center;
             text-align: center;
             position: relative;
-            width: 
+            width: auto;
         }
         h1, {
             potition: absolute;
@@ -82,7 +83,8 @@
         }
         img {
             background-size: cover;
-            height: 500px;
+            height: auto;
+            width: 100%;
             color: #ffffff;
             display: flex;
             justify-content: space-between;
@@ -120,7 +122,7 @@
             </ul>
         </nav>
     </header>
-<div class="image-container">
+<div class="header">
     <img src="banner.png" alt="banner" height="500" width="575">
     <div class="header-text"><h1>Four Network ID</h1></div>
     <p class="header-p">Luckyblock theme minecraft server</p>
