--- a/home/index.html
+++ b/home/index.html
@@ -83,7 +83,7 @@
         }
         img {
             background-size: cover;
-            height: auto;
+            height: 500px;
             width: 100%;
             color: #ffffff;
             display: flex;
