--- a/home/index.html
+++ b/home/index.html
@@ -18,11 +18,11 @@
             height: 50px;
             color: white;
             display: flex;
-            justify-content: space-between;
             align-items: center;
             text-align: center;
             position: relative;
             width: auto;
+            podition: sticky;
         }
         h1, {
             potition: absolute;
