--- a/home/index.html
+++ b/home/index.html
@@ -123,7 +123,7 @@
         </nav>
     </header>
 <div class="header">
-    <img src="banner.png" alt="banner" height="500" width="575">
+    <img src="banner.png" alt="banner">
     <div class="header-text"><h1>Four Network ID</h1></div>
     <p class="header-p">Luckyblock theme minecraft server</p>
 </div>
