--- a/home/index.html
+++ b/home/index.html
@@ -12,7 +12,7 @@
             margin: 0;
         }
         .header {
-            background-image: banner.png;
+            background-image: url('banner.png');
             background-color: #0a0909;
             background-size: cover;
             height: 50px;
