--- a/home/index.html
+++ b/home/index.html
@@ -12,7 +12,6 @@
             margin: 0;
         }
         .header {
-            background-image: url('banner.png');
             background-color: #0a0909;
             background-size: cover;
             height: 50px;
@@ -112,6 +111,18 @@
             transform: translate(-50%, -50%);
             color: #ffffff;
         }
+        .banner {
+            background-image: url('banner.png');
+            background-color: #ff9800;
+            background-size: cover;
+            height: 500px;
+            color: white;
+            display: flex;
+            align-items: center;
+            text-align: center;
+            position: relative;
+            width: auto;
+        }
     </style>
 </head>
 <body>
@@ -122,7 +133,7 @@
             </ul>
         </nav>
     </header>
-<div class="header">
+<div class="banner">
     <img src="banner.png" alt="banner">
     <div class="header-text"><h1>Four Network ID</h1></div>
     <p class="header-p">Luckyblock theme minecraft server</p>
