--- a/home/index.html
+++ b/home/index.html
@@ -12,6 +12,7 @@
             margin: 0;
         }
         .header {
+            position: sticky;
             background-color: #0a0909;
             background-size: cover;
             height: 50px;
@@ -21,7 +22,6 @@
             text-align: center;
             position: relative;
             width: auto;
-            podition: sticky;
         }
         h1, {
             potition: absolute;
