--- a/home/index.html
+++ b/home/index.html
@@ -179,13 +179,13 @@
                 <h4>Contact</h4>          
                 <p>Email: support@four.my.id</p>      
                 <p>Discord: antophd</p>       
-                <a href="https://dc.gg/fournetwork"><p>Four Network discord server</p></a>
+                <a href="https://dc.gg/fournetwork"><p color="ffffff">Four Network discord server</p></a>
             </div>
             <div class="footer-section">           
                 <h4>Follow us</h4>     
                 <p>TikTok</p>  
-                <a href="https://tiktok.com/@antop.hd"><p>@antop.hd</p></a> 
-                <a href="https://tiktok.com/@fournetworkid"><p>@fournetworkid</p></a>
+                <a href="https://tiktok.com/@antop.hd"><p color="ffffff">@antop.hd</p></a> 
+                <a href="https://tiktok.com/@fournetworkid"><p color="ffffff">@fournetworkid</p></a>
             </div>
         </div>
     </footer>
