--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title> Seven Ex Shop </title>
 <body background-color="#ff0000">
-  <img src="banner.jpg" height= "1000" width= "500">
+  <img src="banner.jpg" height= "1000" width= "auto">
   <h1> OPEN PO!!!!</h1>
   <p>Mulai dari tanggal 17 sampai 19 april</p>
   <p>Ready tanggal 22 april</p>
