--- a/home/index.html
+++ b/home/index.html
@@ -122,6 +122,9 @@
             position: relative;
             width: auto;
         }
+        .a {
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -179,13 +182,13 @@
                 <h4>Contact</h4>          
                 <p>Email: support@four.my.id</p>      
                 <p>Discord: antophd</p>       
-                <a href="https://dc.gg/fournetwork"><p color="ffffff">Four Network discord server</p></a>
+                <a href="https://dc.gg/fournetwork" class="a"><p>Four Network discord server</p></a>
             </div>
             <div class="footer-section">           
                 <h4>Follow us</h4>     
                 <p>TikTok</p>  
-                <a href="https://tiktok.com/@antop.hd"><p color="ffffff">@antop.hd</p></a> 
-                <a href="https://tiktok.com/@fournetworkid"><p color="ffffff">@fournetworkid</p></a>
+                <a href="https://tiktok.com/@antop.hd" class="a"><p>@antop.hd</p></a> 
+                <a href="https://tiktok.com/@fournetworkid" class="a"><p>@fournetworkid</p></a>
             </div>
         </div>
     </footer>
