--- a/store/sevenex/index.html
+++ b/store/sevenex/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE HTML>
 <html>
 <title> Seven Ex Shop </title>
+<head>
+  <style>
+    .marquee {
+      background-color: #000000;
+      color: #ffffff;
+      height: 100px;
+      width: auto;
+    }
+  </style>
+</head>
 <body background-color="#ff0000">
-  <img src="banner.jpg" height= "1000" width= "auto">
+  <hr>
+  <marquee class="marquee"> EX SEVEN UnOfficial Shop</marquee>
+  <hr>
+  <img src="banner.jpg" height= "1000" width= "500">
   <h1> OPEN PO!!!!</h1>
   <p>Mulai dari tanggal 17 sampai 19 april</p>
   <p>Ready tanggal 22 april</p>
+  <p>Order: Whatsapp +62 82322214143 (arraffa)</p>
 </body>
 </html>
   
