--- a/store/sevenex/index.html
+++ b/store/sevenex/index.html
@@ -7,14 +7,23 @@
       background-color: #000000;
       color: #ffffff;
       height: 100px;
+      top: 50%;
+    }
+    .img {
+      height: 1000px;
+      width: auto;
+      background-color: #000000;
+    }
+    body {
+      background-color: #808080;
     }
   </style>
 </head>
-<body background-color="#ff0000">
+<body>
   <hr>
   <marquee class="marquee"> EX SEVEN UnOfficial Shop</marquee>
   <hr>
-  <img src="banner.jpg" height= "1000" width= "500">
+  <img src="promosi.jpg" class="img">
   <h1> OPEN PO!!!!</h1>
   <p>Mulai dari tanggal 17 sampai 19 april</p>
   <p>Ready tanggal 22 april</p>
