--- a/store/sevenex/index.html
+++ b/store/sevenex/index.html
@@ -4,10 +4,11 @@
 <head>
   <style>
     .marquee {
-      background-color: #808080;
+      background-color: #8080f0;
       color: #ffffff;
       height: 100px;
-      top: 50%;
+      bottom: 50%;
+      align-text: middle;
     }
     .img {
       height: 1000px;
@@ -16,6 +17,12 @@
     }
     body {
       background-color: #808080;
+    }
+    h1 {
+      color: #ffffff;
+    }
+    p {
+      color: #ffffff;
     }
   </style>
 </head>
