--- a/store/sevenex/index.html
+++ b/store/sevenex/index.html
@@ -4,7 +4,7 @@
 <head>
   <style>
     .marquee {
-      background-color: #8080f0;
+      background-color: #777b7e;
       color: #ffffff;
       height: 100px;
       bottom: 50%;
