--- a/store/sevenex/index.html
+++ b/store/sevenex/index.html
@@ -27,7 +27,7 @@
   </style>
 </head>
 <body>
-  <marquee class="marquee"><h1>EX SEVEN Unofficial Shop</h1></marquee>
+  <marquee class="marquee"><h1>EX TUJUH Toko Tidak Resmi</h1></marquee>
   <hr>
   <img src="promosi.jpg" class="img">
   <h1> OPEN PO!!!!</h1>
