--- a/store/sevenex/index.html
+++ b/store/sevenex/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <title> Toko E/X Tujuh </title>
+<link rel="icon" type="image/x-icon" href="extujuhlogo.png">
 <head>
   <style>
     .marquee {
