--- a/home/index.html
+++ b/home/index.html
@@ -15,7 +15,7 @@
             position: sticky;
             background-color: #0a0909;
             background-size: cover;
-            height: 50px;
+            height: 70px;
             color: white;
             display: flex;
             align-items: center;
@@ -97,7 +97,7 @@
             z-index: 1;
         }
         .header-text {
-            position: absolute;
+            position: right;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
@@ -129,14 +129,18 @@
 </head>
 <body>
     <header class="header">
-        <nav>
-            <ul>
-                <a href="https://four.my.id/home"><h4 class="nav">Home</h4></a> <a href="https://four.my.id/store"><h4 class="nav">Store</h4></a> <a href="https://four.my.id/perks"><h4 class="nav">Perks</h4></a>
-            </ul>
-        </nav>
+        <div class="text-center mt-4">
+            <nav>
+                <ul>
+                    <a href="https://four.my.id/home"><h4 class="nav">Home</h4></a> 
+                    <a href="https://four.my.id/store"><h4 class="nav">Store</h4></a> 
+                    <a href="https://four.my.id/perks"><h4 class="nav">Perks</h4></a>
+                </ul>
+            </nav>
+        </div>
     </header>
     <div class="banner">
-        <div class="header-text"><h2>  Four Network ID  </h2></div>
+        <div class="header-text"><h1>  Four Network ID  </h1></div>
         <p class="header-p">  Luckyblock theme minecraft server  </p>
     </div>
     
