--- a/home/index.html
+++ b/home/index.html
@@ -67,10 +67,6 @@
         .footer-section p {
             margin: 5px 0;
         }
-        h1 {
-            text-align: center;
-            color: #ffffff;
-        }
         .server-status {
             padding: 20px;
             border-radius: 5px;
@@ -97,11 +93,12 @@
             z-index: 1;
         }
         .header-text {
-            position: right;
+            position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
             font-size: 2em;
+            color: #ffffff;
         }
         .header-p {
             position: absolute;
@@ -129,7 +126,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="text-center mt-4">
+        <div class="text-center mr-3">
             <nav>
                 <ul>
                     <a href="https://four.my.id/home"><h4 class="nav">Home</h4></a> 
