--- a/home/index.html
+++ b/home/index.html
@@ -13,7 +13,7 @@
         }
         .header {
             position: sticky;
-            background-color: #0a0909;
+            background-color: #000f0e;
             background-size: cover;
             height: 70px;
             color: white;
