--- a/home/index.html
+++ b/home/index.html
@@ -13,7 +13,7 @@
         }
         .header {
             position: sticky;
-            background-color: #000f0e;
+            background-color: #808080;
             background-size: cover;
             height: 70px;
             color: white;
@@ -22,11 +22,12 @@
             text-align: center;
             width: auto;
         }
-        h1, {
+        h1 {
             potition: absolute;
             font-size: 3rem;
             color: #ffffff;
             z-index: 1;
+            width: auto;
         }
         .content {
             background-color: #ff9800;
@@ -86,11 +87,6 @@
             position: relative;
             margin: auto;
         }
-        .nav {
-            color: #ffffff;
-            text-align: right;
-            z-index: 1;
-        }
         .header-text {
             position: absolute;
             top: 50%;
@@ -125,12 +121,12 @@
 </head>
 <body>
     <header class="header">
-        <div class="text-center mr-3">
+        <div class="text-center mt-4">
             <nav>
                 <ul>
-                    <a href="https://four.my.id/home"><h4 class="nav">Home</h4></a> 
-                    <a href="https://four.my.id/store"><h4 class="nav">Store</h4></a> 
-                    <a href="https://four.my.id/perks"><h4 class="nav">Perks</h4></a>
+                    <a href="https://four.my.id/home" class="mr-3"><h4>Home</h4></a> 
+                    <a href="https://four.my.id/store" class="mr-3"><h4>Store</h4></a> 
+                    <a href="https://four.my.id/perks" class="mr-3"><h4>Perks</h4></a>
                 </ul>
             </nav>
         </div>
