--- a/home/index.html
+++ b/home/index.html
@@ -120,7 +120,7 @@
     </style>
 </head>
 <body>
-    <header class="header">
+    <header>
         <div class="text-center mt-4">
             <nav>
                 <ul>
