--- a/home/index.html
+++ b/home/index.html
@@ -120,15 +120,14 @@
     </style>
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="text-center mt-4">
             <nav>
-                <ul>
-                    <a href="https://four.my.id/home" class="mr-3"><h4>Home</h4></a> 
-                    <a href="https://four.my.id/store" class="mr-3"><h4>Store</h4></a> 
-                    <a href="https://four.my.id/perks" class="mr-3"><h4>Perks</h4></a>
-                </ul>
+                <a href="https://four.my.id/home" class="mr-3"><h4>Home</h4></a> 
+                <a href="https://four.my.id/store" class="mr-3"><h4>Store</h4></a> 
+                <a href="https://four.my.id/perks" class="mr-3"><h4>Perks</h4></a>
             </nav>
+            <hr>
         </div>
     </header>
     <div class="banner">
