--- a/home/index.html
+++ b/home/index.html
@@ -122,11 +122,7 @@
 <body>
     <header class="header">
         <div class="text-center mt-4">
-            <nav>
-                <a href="https://four.my.id/home" class="mr-3"><h4>Home</h4></a> 
-                <a href="https://four.my.id/store" class="mr-3"><h4>Store</h4></a> 
-                <a href="https://four.my.id/perks" class="mr-3"><h4>Perks</h4></a>
-            </nav>
+            <a href="https://four.my.id/home" class="mr-3"><h4>Home</h4></a> <a href="https://four.my.id/store" class="mr-3"><h4>Store</h4></a> <a href="https://four.my.id/perks" class="mr-3"><h4>Perks</h4></a>
             <hr>
         </div>
     </header>
